# FastPDFReport

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  tests.ipynb
app/: celery.py  database.py  exceptions.py  main.py  settings.py
app/orm/: dao.py  orm.py  orm_crud.py
app/pdf_reports/: dao.py  models.py  routers.py  schemas.py
app/services/: generate_pdf_report.py  routers.py  utils.py
app/static/: fastapi_login.html  reports_menu.html
app/tasks/: service.py  tasks.py
app/users/: dao.py  dependencies.py  models.py  routers.py  schemas.py  service.py
src/: database.py  main.py  services.py  settings.py  tasks.py
src/api/: __init__.py  pdf.py  service.py  services.py
src/models/: pdf.py
src/orm/: orm_crud.py
src/orm/models/: __init__.py  base.py  pdf.py  report.py  user.py
src/pdf_reports/: models.py  routers.py  schemas.py
src/schemas/: pdf.py
src/services/: routers.py  utils.py
src/tasks/: tasks.py
src/users/: models.py
